--- a/package.json
+++ b/package.json
@@ -1,18 +1,11 @@
 {
-  "name": "youtube-transcript-api",
+  "name": "youtube-transcript-api-pure",
   "version": "1.0.0",
-  "description": "A simple API to get YouTube video details and transcript.",
+  "description": "A robust API to get YouTube video details and transcript.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": [
-    "youtube",
-    "transcript",
-    "api"
-  ],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
